Protover0.0.0/bin/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    colon

Grammar

Rule 0     S' -> teigilist
Rule 1     teigilist -> teigi
Rule 2     teigilist -> teigilist teigi
Rule 3     paramlist -> param
Rule 4     paramlist -> paramlist CONMA param
Rule 5     param -> TYPE ID
Rule 6     param -> TYPE
Rule 7     bun -> ID EQUALS LAMDA KAKKO paramlist KOKKA LBRACE bunlist RBRACE SEMI
Rule 8     bun -> ID KAKKO shiki KOKKA SEMI
Rule 9     teigi -> STR
Rule 10    bun -> ID EQUALS ID SEMI
Rule 11    teigi -> TYPE ID KAKKO paramlist KOKKA yaji TYPE LBRACE bunlist RBRACE
Rule 12    teigi -> TYPE ID yaji TYPE LBRACE bunlist RBRACE
Rule 13    teigi -> STRUCT ID LBRACE teigilist RBRACE
Rule 14    class -> classf
Rule 15    class -> class classf
Rule 16    teigi -> CLASS ID LBRACE class RBRACE
Rule 17    teigi -> INCLUDE LBRACE shiki RBRACE
Rule 18    classf -> ID KAKKO paramlist KOKKA yaji TYPE LBRACE bunlist RBRACE
Rule 19    bun -> ID PIRIOD ID KAKKO shiki KOKKA SEMI
Rule 20    bun -> PASS SEMI
Rule 21    bunlist -> bun
Rule 22    bunlist -> bunlist bun
Rule 23    bun -> TYPE ID EQUALS shiki SEMI
Rule 24    bun -> TYPE ID EQUALS LISL STR LISR SEMI
Rule 25    bun -> TYPE ID EQUALS ID LISL shiki LISR SEMI
Rule 26    bun -> ID EQUALS LISL LISR SEMI
Rule 27    bun -> ID EQUALS ID OPTASU NUMBER SEMI
Rule 28    bun -> ID EQUALS ID OPKAKERU NUMBER SEMI
Rule 29    bun -> ID EQUALS ID OPMIN NUMBER SEMI
Rule 30    bun -> ID EQUALS ID OPWARU NUMBER SEMI
Rule 31    shiki -> TYPEF KAKKO shiki KOKKA
Rule 32    shiki -> TYPE KAKKO shiki KOKKA
Rule 33    shiki -> RESERV KAKKO shiki KOKKA
Rule 34    bun -> RETURN shiki SEMI
Rule 35    bun -> RETURN bun
Rule 36    bun -> IF hikaku LBRACE bunlist RBRACE
Rule 37    bun -> IF hikaku LBRACE bunlist RBRACE ELSE LBRACE bunlist RBRACE
Rule 38    bun -> WHILE shiki LBRACE bunlist RBRACE
Rule 39    hikaku -> shiki
Rule 40    hikaku -> hikaku EQOP shiki
Rule 41    hikaku -> hikaku dainari shiki
Rule 42    hikaku -> hikaku syounari shiki
Rule 43    shiki -> NUMBER
Rule 44    shiki -> ID
Rule 45    shiki -> TYPE
Rule 46    shiki -> STR
Rule 47    bun -> PASS
Rule 48    bun -> PASS KAKKO KOKKA
Rule 49    bun -> PASS KAKKO PASS KOKKA SEMI
Rule 50    shiki -> OPMIN NUMBER
Rule 51    shiki -> shiki OPTASU shiki
Rule 52    shiki -> shiki OPKAKERU shiki
Rule 53    shiki -> shiki OPMIN shiki
Rule 54    shiki -> shiki OPWARU shiki
Rule 55    shiki -> KAKKO shiki KOKKA
Rule 56    shiki -> shiki CONMA ID
Rule 57    bun -> RESERV ID LISL NUMBER LISR EQUALS STR SEMI
Rule 58    bun -> RESERV ID LISL ID LISR EQUALS STR SEMI
Rule 59    bun -> RESERV ID LISL NUMBER LISR EQUALS ID SEMI
Rule 60    bun -> RESERV ID LISL ID LISR EQUALS ID SEMI
Rule 61    bun -> RESERV KAKKO shiki KOKKA SEMI
Rule 62    shiki -> ID KAKKO shiki KOKKA
Rule 63    shiki -> ID KAKKO KOKKA
Rule 64    bun -> TYPE TYPE LBRACE letlist RBRACE SEMI
Rule 65    bun -> GLOBAL TYPE LBRACE letlist RBRACE SEMI
Rule 66    letlist -> ID EQUALS STR SEMI
Rule 67    letlist -> ID EQUALS NUMBER SEMI
Rule 68    letlist -> letlist ID EQUALS STR SEMI
Rule 69    letlist -> letlist ID EQUALS NUMBER SEMI
Rule 70    bun -> ID EQUALS ID OPTASU STR SEMI
Rule 71    bun -> ID EQUALS STR OPTASU ID SEMI
Rule 72    bun -> ID OPTASU OPTASU SEMI
Rule 73    bun -> STR OPTASU OPTASU SEMI

Terminals, with rules where they appear

CLASS                : 16
CONMA                : 4 56
ELSE                 : 37
EQOP                 : 40
EQUALS               : 7 10 23 24 25 26 27 28 29 30 57 58 59 60 66 67 68 69 70 71
GLOBAL               : 65
ID                   : 5 7 8 10 10 11 12 13 16 18 19 19 23 24 25 25 26 27 27 28 28 29 29 30 30 44 56 57 58 58 59 59 60 60 60 62 63 66 67 68 69 70 70 71 71 72
IF                   : 36 37
INCLUDE              : 17
KAKKO                : 7 8 11 18 19 31 32 33 48 49 55 61 62 63
KOKKA                : 7 8 11 18 19 31 32 33 48 49 55 61 62 63
LAMDA                : 7
LBRACE               : 7 11 12 13 16 17 18 36 37 37 38 64 65
LISL                 : 24 25 26 57 58 59 60
LISR                 : 24 25 26 57 58 59 60
NUMBER               : 27 28 29 30 43 50 57 59 67 69
OPKAKERU             : 28 52
OPMIN                : 29 50 53
OPTASU               : 27 51 70 71 72 72 73 73
OPWARU               : 30 54
PASS                 : 20 47 48 49 49
PIRIOD               : 19
RBRACE               : 7 11 12 13 16 17 18 36 37 37 38 64 65
RESERV               : 33 57 58 59 60 61
RETURN               : 34 35
SEMI                 : 7 8 10 19 20 23 24 25 26 27 28 29 30 34 49 57 58 59 60 61 64 65 66 67 68 69 70 71 72 73
STR                  : 9 24 46 57 58 66 68 70 71 73
STRUCT               : 13
TYPE                 : 5 6 11 11 12 12 18 23 24 25 32 45 64 64 65
TYPEF                : 31
WHILE                : 38
colon                : 
dainari              : 41
error                : 
syounari             : 42
yaji                 : 11 12 18

Nonterminals, with rules where they appear

bun                  : 21 22 35
bunlist              : 7 11 12 18 22 36 37 37 38
class                : 15 16
classf               : 14 15
hikaku               : 36 37 40 41 42
letlist              : 64 65 68 69
param                : 3 4
paramlist            : 4 7 11 18
shiki                : 8 17 19 23 25 31 32 33 34 38 39 40 41 42 51 51 52 52 53 53 54 54 55 56 61 62
teigi                : 1 2
teigilist            : 2 13 0

Parsing method: LALR

state 0

    (0) S' -> . teigilist
    (1) teigilist -> . teigi
    (2) teigilist -> . teigilist teigi
    (9) teigi -> . STR
    (11) teigi -> . TYPE ID KAKKO paramlist KOKKA yaji TYPE LBRACE bunlist RBRACE
    (12) teigi -> . TYPE ID yaji TYPE LBRACE bunlist RBRACE
    (13) teigi -> . STRUCT ID LBRACE teigilist RBRACE
    (16) teigi -> . CLASS ID LBRACE class RBRACE
    (17) teigi -> . INCLUDE LBRACE shiki RBRACE

    STR             shift and go to state 3
    TYPE            shift and go to state 4
    STRUCT          shift and go to state 5
    CLASS           shift and go to state 6
    INCLUDE         shift and go to state 7

    teigilist                      shift and go to state 1
    teigi                          shift and go to state 2

state 1

    (0) S' -> teigilist .
    (2) teigilist -> teigilist . teigi
    (9) teigi -> . STR
    (11) teigi -> . TYPE ID KAKKO paramlist KOKKA yaji TYPE LBRACE bunlist RBRACE
    (12) teigi -> . TYPE ID yaji TYPE LBRACE bunlist RBRACE
    (13) teigi -> . STRUCT ID LBRACE teigilist RBRACE
    (16) teigi -> . CLASS ID LBRACE class RBRACE
    (17) teigi -> . INCLUDE LBRACE shiki RBRACE

    STR             shift and go to state 3
    TYPE            shift and go to state 4
    STRUCT          shift and go to state 5
    CLASS           shift and go to state 6
    INCLUDE         shift and go to state 7

    teigi                          shift and go to state 8

state 2

    (1) teigilist -> teigi .

    STR             reduce using rule 1 (teigilist -> teigi .)
    TYPE            reduce using rule 1 (teigilist -> teigi .)
    STRUCT          reduce using rule 1 (teigilist -> teigi .)
    CLASS           reduce using rule 1 (teigilist -> teigi .)
    INCLUDE         reduce using rule 1 (teigilist -> teigi .)
    $end            reduce using rule 1 (teigilist -> teigi .)
    RBRACE          reduce using rule 1 (teigilist -> teigi .)


state 3

    (9) teigi -> STR .

    STR             reduce using rule 9 (teigi -> STR .)
    TYPE            reduce using rule 9 (teigi -> STR .)
    STRUCT          reduce using rule 9 (teigi -> STR .)
    CLASS           reduce using rule 9 (teigi -> STR .)
    INCLUDE         reduce using rule 9 (teigi -> STR .)
    $end            reduce using rule 9 (teigi -> STR .)
    RBRACE          reduce using rule 9 (teigi -> STR .)


state 4

    (11) teigi -> TYPE . ID KAKKO paramlist KOKKA yaji TYPE LBRACE bunlist RBRACE
    (12) teigi -> TYPE . ID yaji TYPE LBRACE bunlist RBRACE

    ID              shift and go to state 9


state 5

    (13) teigi -> STRUCT . ID LBRACE teigilist RBRACE

    ID              shift and go to state 10


state 6

    (16) teigi -> CLASS . ID LBRACE class RBRACE

    ID              shift and go to state 11


state 7

    (17) teigi -> INCLUDE . LBRACE shiki RBRACE

    LBRACE          shift and go to state 12


state 8

    (2) teigilist -> teigilist teigi .

    STR             reduce using rule 2 (teigilist -> teigilist teigi .)
    TYPE            reduce using rule 2 (teigilist -> teigilist teigi .)
    STRUCT          reduce using rule 2 (teigilist -> teigilist teigi .)
    CLASS           reduce using rule 2 (teigilist -> teigilist teigi .)
    INCLUDE         reduce using rule 2 (teigilist -> teigilist teigi .)
    $end            reduce using rule 2 (teigilist -> teigilist teigi .)
    RBRACE          reduce using rule 2 (teigilist -> teigilist teigi .)


state 9

    (11) teigi -> TYPE ID . KAKKO paramlist KOKKA yaji TYPE LBRACE bunlist RBRACE
    (12) teigi -> TYPE ID . yaji TYPE LBRACE bunlist RBRACE

    KAKKO           shift and go to state 13
    yaji            shift and go to state 14


state 10

    (13) teigi -> STRUCT ID . LBRACE teigilist RBRACE

    LBRACE          shift and go to state 15


state 11

    (16) teigi -> CLASS ID . LBRACE class RBRACE

    LBRACE          shift and go to state 16


state 12

    (17) teigi -> INCLUDE LBRACE . shiki RBRACE
    (31) shiki -> . TYPEF KAKKO shiki KOKKA
    (32) shiki -> . TYPE KAKKO shiki KOKKA
    (33) shiki -> . RESERV KAKKO shiki KOKKA
    (43) shiki -> . NUMBER
    (44) shiki -> . ID
    (45) shiki -> . TYPE
    (46) shiki -> . STR
    (50) shiki -> . OPMIN NUMBER
    (51) shiki -> . shiki OPTASU shiki
    (52) shiki -> . shiki OPKAKERU shiki
    (53) shiki -> . shiki OPMIN shiki
    (54) shiki -> . shiki OPWARU shiki
    (55) shiki -> . KAKKO shiki KOKKA
    (56) shiki -> . shiki CONMA ID
    (62) shiki -> . ID KAKKO shiki KOKKA
    (63) shiki -> . ID KAKKO KOKKA

    TYPEF           shift and go to state 18
    TYPE            shift and go to state 20
    RESERV          shift and go to state 21
    NUMBER          shift and go to state 22
    ID              shift and go to state 23
    STR             shift and go to state 24
    OPMIN           shift and go to state 25
    KAKKO           shift and go to state 19

    shiki                          shift and go to state 17

state 13

    (11) teigi -> TYPE ID KAKKO . paramlist KOKKA yaji TYPE LBRACE bunlist RBRACE
    (3) paramlist -> . param
    (4) paramlist -> . paramlist CONMA param
    (5) param -> . TYPE ID
    (6) param -> . TYPE

    TYPE            shift and go to state 26

    paramlist                      shift and go to state 27
    param                          shift and go to state 28

state 14

    (12) teigi -> TYPE ID yaji . TYPE LBRACE bunlist RBRACE

    TYPE            shift and go to state 29


state 15

    (13) teigi -> STRUCT ID LBRACE . teigilist RBRACE
    (1) teigilist -> . teigi
    (2) teigilist -> . teigilist teigi
    (9) teigi -> . STR
    (11) teigi -> . TYPE ID KAKKO paramlist KOKKA yaji TYPE LBRACE bunlist RBRACE
    (12) teigi -> . TYPE ID yaji TYPE LBRACE bunlist RBRACE
    (13) teigi -> . STRUCT ID LBRACE teigilist RBRACE
    (16) teigi -> . CLASS ID LBRACE class RBRACE
    (17) teigi -> . INCLUDE LBRACE shiki RBRACE

    STR             shift and go to state 3
    TYPE            shift and go to state 4
    STRUCT          shift and go to state 5
    CLASS           shift and go to state 6
    INCLUDE         shift and go to state 7

    teigilist                      shift and go to state 30
    teigi                          shift and go to state 2

state 16

    (16) teigi -> CLASS ID LBRACE . class RBRACE
    (14) class -> . classf
    (15) class -> . class classf
    (18) classf -> . ID KAKKO paramlist KOKKA yaji TYPE LBRACE bunlist RBRACE

    ID              shift and go to state 31

    class                          shift and go to state 32
    classf                         shift and go to state 33

state 17

    (17) teigi -> INCLUDE LBRACE shiki . RBRACE
    (51) shiki -> shiki . OPTASU shiki
    (52) shiki -> shiki . OPKAKERU shiki
    (53) shiki -> shiki . OPMIN shiki
    (54) shiki -> shiki . OPWARU shiki
    (56) shiki -> shiki . CONMA ID

    RBRACE          shift and go to state 34
    OPTASU          shift and go to state 35
    OPKAKERU        shift and go to state 36
    OPMIN           shift and go to state 37
    OPWARU          shift and go to state 38
    CONMA           shift and go to state 39


state 18

    (31) shiki -> TYPEF . KAKKO shiki KOKKA

    KAKKO           shift and go to state 40


state 19

    (55) shiki -> KAKKO . shiki KOKKA
    (31) shiki -> . TYPEF KAKKO shiki KOKKA
    (32) shiki -> . TYPE KAKKO shiki KOKKA
    (33) shiki -> . RESERV KAKKO shiki KOKKA
    (43) shiki -> . NUMBER
    (44) shiki -> . ID
    (45) shiki -> . TYPE
    (46) shiki -> . STR
    (50) shiki -> . OPMIN NUMBER
    (51) shiki -> . shiki OPTASU shiki
    (52) shiki -> . shiki OPKAKERU shiki
    (53) shiki -> . shiki OPMIN shiki
    (54) shiki -> . shiki OPWARU shiki
    (55) shiki -> . KAKKO shiki KOKKA
    (56) shiki -> . shiki CONMA ID
    (62) shiki -> . ID KAKKO shiki KOKKA
    (63) shiki -> . ID KAKKO KOKKA

    TYPEF           shift and go to state 18
    TYPE            shift and go to state 20
    RESERV          shift and go to state 21
    NUMBER          shift and go to state 22
    ID              shift and go to state 23
    STR             shift and go to state 24
    OPMIN           shift and go to state 25
    KAKKO           shift and go to state 19

    shiki                          shift and go to state 41

state 20

    (32) shiki -> TYPE . KAKKO shiki KOKKA
    (45) shiki -> TYPE .

    KAKKO           shift and go to state 42
    RBRACE          reduce using rule 45 (shiki -> TYPE .)
    OPTASU          reduce using rule 45 (shiki -> TYPE .)
    OPKAKERU        reduce using rule 45 (shiki -> TYPE .)
    OPMIN           reduce using rule 45 (shiki -> TYPE .)
    OPWARU          reduce using rule 45 (shiki -> TYPE .)
    CONMA           reduce using rule 45 (shiki -> TYPE .)
    KOKKA           reduce using rule 45 (shiki -> TYPE .)
    SEMI            reduce using rule 45 (shiki -> TYPE .)
    LBRACE          reduce using rule 45 (shiki -> TYPE .)
    EQOP            reduce using rule 45 (shiki -> TYPE .)
    dainari         reduce using rule 45 (shiki -> TYPE .)
    syounari        reduce using rule 45 (shiki -> TYPE .)
    LISR            reduce using rule 45 (shiki -> TYPE .)


state 21

    (33) shiki -> RESERV . KAKKO shiki KOKKA

    KAKKO           shift and go to state 43


state 22

    (43) shiki -> NUMBER .

    RBRACE          reduce using rule 43 (shiki -> NUMBER .)
    OPTASU          reduce using rule 43 (shiki -> NUMBER .)
    OPKAKERU        reduce using rule 43 (shiki -> NUMBER .)
    OPMIN           reduce using rule 43 (shiki -> NUMBER .)
    OPWARU          reduce using rule 43 (shiki -> NUMBER .)
    CONMA           reduce using rule 43 (shiki -> NUMBER .)
    KOKKA           reduce using rule 43 (shiki -> NUMBER .)
    SEMI            reduce using rule 43 (shiki -> NUMBER .)
    LBRACE          reduce using rule 43 (shiki -> NUMBER .)
    EQOP            reduce using rule 43 (shiki -> NUMBER .)
    dainari         reduce using rule 43 (shiki -> NUMBER .)
    syounari        reduce using rule 43 (shiki -> NUMBER .)
    LISR            reduce using rule 43 (shiki -> NUMBER .)


state 23

    (44) shiki -> ID .
    (62) shiki -> ID . KAKKO shiki KOKKA
    (63) shiki -> ID . KAKKO KOKKA

    RBRACE          reduce using rule 44 (shiki -> ID .)
    OPTASU          reduce using rule 44 (shiki -> ID .)
    OPKAKERU        reduce using rule 44 (shiki -> ID .)
    OPMIN           reduce using rule 44 (shiki -> ID .)
    OPWARU          reduce using rule 44 (shiki -> ID .)
    CONMA           reduce using rule 44 (shiki -> ID .)
    KOKKA           reduce using rule 44 (shiki -> ID .)
    SEMI            reduce using rule 44 (shiki -> ID .)
    LBRACE          reduce using rule 44 (shiki -> ID .)
    EQOP            reduce using rule 44 (shiki -> ID .)
    dainari         reduce using rule 44 (shiki -> ID .)
    syounari        reduce using rule 44 (shiki -> ID .)
    LISR            reduce using rule 44 (shiki -> ID .)
    KAKKO           shift and go to state 44


state 24

    (46) shiki -> STR .

    RBRACE          reduce using rule 46 (shiki -> STR .)
    OPTASU          reduce using rule 46 (shiki -> STR .)
    OPKAKERU        reduce using rule 46 (shiki -> STR .)
    OPMIN           reduce using rule 46 (shiki -> STR .)
    OPWARU          reduce using rule 46 (shiki -> STR .)
    CONMA           reduce using rule 46 (shiki -> STR .)
    KOKKA           reduce using rule 46 (shiki -> STR .)
    SEMI            reduce using rule 46 (shiki -> STR .)
    LBRACE          reduce using rule 46 (shiki -> STR .)
    EQOP            reduce using rule 46 (shiki -> STR .)
    dainari         reduce using rule 46 (shiki -> STR .)
    syounari        reduce using rule 46 (shiki -> STR .)
    LISR            reduce using rule 46 (shiki -> STR .)


state 25

    (50) shiki -> OPMIN . NUMBER

    NUMBER          shift and go to state 45


state 26

    (5) param -> TYPE . ID
    (6) param -> TYPE .

    ID              shift and go to state 46
    KOKKA           reduce using rule 6 (param -> TYPE .)
    CONMA           reduce using rule 6 (param -> TYPE .)


state 27

    (11) teigi -> TYPE ID KAKKO paramlist . KOKKA yaji TYPE LBRACE bunlist RBRACE
    (4) paramlist -> paramlist . CONMA param

    KOKKA           shift and go to state 47
    CONMA           shift and go to state 48


state 28

    (3) paramlist -> param .

    KOKKA           reduce using rule 3 (paramlist -> param .)
    CONMA           reduce using rule 3 (paramlist -> param .)


state 29

    (12) teigi -> TYPE ID yaji TYPE . LBRACE bunlist RBRACE

    LBRACE          shift and go to state 49


state 30

    (13) teigi -> STRUCT ID LBRACE teigilist . RBRACE
    (2) teigilist -> teigilist . teigi
    (9) teigi -> . STR
    (11) teigi -> . TYPE ID KAKKO paramlist KOKKA yaji TYPE LBRACE bunlist RBRACE
    (12) teigi -> . TYPE ID yaji TYPE LBRACE bunlist RBRACE
    (13) teigi -> . STRUCT ID LBRACE teigilist RBRACE
    (16) teigi -> . CLASS ID LBRACE class RBRACE
    (17) teigi -> . INCLUDE LBRACE shiki RBRACE

    RBRACE          shift and go to state 50
    STR             shift and go to state 3
    TYPE            shift and go to state 4
    STRUCT          shift and go to state 5
    CLASS           shift and go to state 6
    INCLUDE         shift and go to state 7

    teigi                          shift and go to state 8

state 31

    (18) classf -> ID . KAKKO paramlist KOKKA yaji TYPE LBRACE bunlist RBRACE

    KAKKO           shift and go to state 51


state 32

    (16) teigi -> CLASS ID LBRACE class . RBRACE
    (15) class -> class . classf
    (18) classf -> . ID KAKKO paramlist KOKKA yaji TYPE LBRACE bunlist RBRACE

    RBRACE          shift and go to state 52
    ID              shift and go to state 31

    classf                         shift and go to state 53

state 33

    (14) class -> classf .

    RBRACE          reduce using rule 14 (class -> classf .)
    ID              reduce using rule 14 (class -> classf .)


state 34

    (17) teigi -> INCLUDE LBRACE shiki RBRACE .

    STR             reduce using rule 17 (teigi -> INCLUDE LBRACE shiki RBRACE .)
    TYPE            reduce using rule 17 (teigi -> INCLUDE LBRACE shiki RBRACE .)
    STRUCT          reduce using rule 17 (teigi -> INCLUDE LBRACE shiki RBRACE .)
    CLASS           reduce using rule 17 (teigi -> INCLUDE LBRACE shiki RBRACE .)
    INCLUDE         reduce using rule 17 (teigi -> INCLUDE LBRACE shiki RBRACE .)
    $end            reduce using rule 17 (teigi -> INCLUDE LBRACE shiki RBRACE .)
    RBRACE          reduce using rule 17 (teigi -> INCLUDE LBRACE shiki RBRACE .)


state 35

    (51) shiki -> shiki OPTASU . shiki
    (31) shiki -> . TYPEF KAKKO shiki KOKKA
    (32) shiki -> . TYPE KAKKO shiki KOKKA
    (33) shiki -> . RESERV KAKKO shiki KOKKA
    (43) shiki -> . NUMBER
    (44) shiki -> . ID
    (45) shiki -> . TYPE
    (46) shiki -> . STR
    (50) shiki -> . OPMIN NUMBER
    (51) shiki -> . shiki OPTASU shiki
    (52) shiki -> . shiki OPKAKERU shiki
    (53) shiki -> . shiki OPMIN shiki
    (54) shiki -> . shiki OPWARU shiki
    (55) shiki -> . KAKKO shiki KOKKA
    (56) shiki -> . shiki CONMA ID
    (62) shiki -> . ID KAKKO shiki KOKKA
    (63) shiki -> . ID KAKKO KOKKA

    TYPEF           shift and go to state 18
    TYPE            shift and go to state 20
    RESERV          shift and go to state 21
    NUMBER          shift and go to state 22
    ID              shift and go to state 23
    STR             shift and go to state 24
    OPMIN           shift and go to state 25
    KAKKO           shift and go to state 19

    shiki                          shift and go to state 54

state 36

    (52) shiki -> shiki OPKAKERU . shiki
    (31) shiki -> . TYPEF KAKKO shiki KOKKA
    (32) shiki -> . TYPE KAKKO shiki KOKKA
    (33) shiki -> . RESERV KAKKO shiki KOKKA
    (43) shiki -> . NUMBER
    (44) shiki -> . ID
    (45) shiki -> . TYPE
    (46) shiki -> . STR
    (50) shiki -> . OPMIN NUMBER
    (51) shiki -> . shiki OPTASU shiki
    (52) shiki -> . shiki OPKAKERU shiki
    (53) shiki -> . shiki OPMIN shiki
    (54) shiki -> . shiki OPWARU shiki
    (55) shiki -> . KAKKO shiki KOKKA
    (56) shiki -> . shiki CONMA ID
    (62) shiki -> . ID KAKKO shiki KOKKA
    (63) shiki -> . ID KAKKO KOKKA

    TYPEF           shift and go to state 18
    TYPE            shift and go to state 20
    RESERV          shift and go to state 21
    NUMBER          shift and go to state 22
    ID              shift and go to state 23
    STR             shift and go to state 24
    OPMIN           shift and go to state 25
    KAKKO           shift and go to state 19

    shiki                          shift and go to state 55

state 37

    (53) shiki -> shiki OPMIN . shiki
    (31) shiki -> . TYPEF KAKKO shiki KOKKA
    (32) shiki -> . TYPE KAKKO shiki KOKKA
    (33) shiki -> . RESERV KAKKO shiki KOKKA
    (43) shiki -> . NUMBER
    (44) shiki -> . ID
    (45) shiki -> . TYPE
    (46) shiki -> . STR
    (50) shiki -> . OPMIN NUMBER
    (51) shiki -> . shiki OPTASU shiki
    (52) shiki -> . shiki OPKAKERU shiki
    (53) shiki -> . shiki OPMIN shiki
    (54) shiki -> . shiki OPWARU shiki
    (55) shiki -> . KAKKO shiki KOKKA
    (56) shiki -> . shiki CONMA ID
    (62) shiki -> . ID KAKKO shiki KOKKA
    (63) shiki -> . ID KAKKO KOKKA

    TYPEF           shift and go to state 18
    TYPE            shift and go to state 20
    RESERV          shift and go to state 21
    NUMBER          shift and go to state 22
    ID              shift and go to state 23
    STR             shift and go to state 24
    OPMIN           shift and go to state 25
    KAKKO           shift and go to state 19

    shiki                          shift and go to state 56

state 38

    (54) shiki -> shiki OPWARU . shiki
    (31) shiki -> . TYPEF KAKKO shiki KOKKA
    (32) shiki -> . TYPE KAKKO shiki KOKKA
    (33) shiki -> . RESERV KAKKO shiki KOKKA
    (43) shiki -> . NUMBER
    (44) shiki -> . ID
    (45) shiki -> . TYPE
    (46) shiki -> . STR
    (50) shiki -> . OPMIN NUMBER
    (51) shiki -> . shiki OPTASU shiki
    (52) shiki -> . shiki OPKAKERU shiki
    (53) shiki -> . shiki OPMIN shiki
    (54) shiki -> . shiki OPWARU shiki
    (55) shiki -> . KAKKO shiki KOKKA
    (56) shiki -> . shiki CONMA ID
    (62) shiki -> . ID KAKKO shiki KOKKA
    (63) shiki -> . ID KAKKO KOKKA

    TYPEF           shift and go to state 18
    TYPE            shift and go to state 20
    RESERV          shift and go to state 21
    NUMBER          shift and go to state 22
    ID              shift and go to state 23
    STR             shift and go to state 24
    OPMIN           shift and go to state 25
    KAKKO           shift and go to state 19

    shiki                          shift and go to state 57

state 39

    (56) shiki -> shiki CONMA . ID

    ID              shift and go to state 58


state 40

    (31) shiki -> TYPEF KAKKO . shiki KOKKA
    (31) shiki -> . TYPEF KAKKO shiki KOKKA
    (32) shiki -> . TYPE KAKKO shiki KOKKA
    (33) shiki -> . RESERV KAKKO shiki KOKKA
    (43) shiki -> . NUMBER
    (44) shiki -> . ID
    (45) shiki -> . TYPE
    (46) shiki -> . STR
    (50) shiki -> . OPMIN NUMBER
    (51) shiki -> . shiki OPTASU shiki
    (52) shiki -> . shiki OPKAKERU shiki
    (53) shiki -> . shiki OPMIN shiki
    (54) shiki -> . shiki OPWARU shiki
    (55) shiki -> . KAKKO shiki KOKKA
    (56) shiki -> . shiki CONMA ID
    (62) shiki -> . ID KAKKO shiki KOKKA
    (63) shiki -> . ID KAKKO KOKKA

    TYPEF           shift and go to state 18
    TYPE            shift and go to state 20
    RESERV          shift and go to state 21
    NUMBER          shift and go to state 22
    ID              shift and go to state 23
    STR             shift and go to state 24
    OPMIN           shift and go to state 25
    KAKKO           shift and go to state 19

    shiki                          shift and go to state 59

state 41

    (55) shiki -> KAKKO shiki . KOKKA
    (51) shiki -> shiki . OPTASU shiki
    (52) shiki -> shiki . OPKAKERU shiki
    (53) shiki -> shiki . OPMIN shiki
    (54) shiki -> shiki . OPWARU shiki
    (56) shiki -> shiki . CONMA ID

    KOKKA           shift and go to state 60
    OPTASU          shift and go to state 35
    OPKAKERU        shift and go to state 36
    OPMIN           shift and go to state 37
    OPWARU          shift and go to state 38
    CONMA           shift and go to state 39


state 42

    (32) shiki -> TYPE KAKKO . shiki KOKKA
    (31) shiki -> . TYPEF KAKKO shiki KOKKA
    (32) shiki -> . TYPE KAKKO shiki KOKKA
    (33) shiki -> . RESERV KAKKO shiki KOKKA
    (43) shiki -> . NUMBER
    (44) shiki -> . ID
    (45) shiki -> . TYPE
    (46) shiki -> . STR
    (50) shiki -> . OPMIN NUMBER
    (51) shiki -> . shiki OPTASU shiki
    (52) shiki -> . shiki OPKAKERU shiki
    (53) shiki -> . shiki OPMIN shiki
    (54) shiki -> . shiki OPWARU shiki
    (55) shiki -> . KAKKO shiki KOKKA
    (56) shiki -> . shiki CONMA ID
    (62) shiki -> . ID KAKKO shiki KOKKA
    (63) shiki -> . ID KAKKO KOKKA

    TYPEF           shift and go to state 18
    TYPE            shift and go to state 20
    RESERV          shift and go to state 21
    NUMBER          shift and go to state 22
    ID              shift and go to state 23
    STR             shift and go to state 24
    OPMIN           shift and go to state 25
    KAKKO           shift and go to state 19

    shiki                          shift and go to state 61

state 43

    (33) shiki -> RESERV KAKKO . shiki KOKKA
    (31) shiki -> . TYPEF KAKKO shiki KOKKA
    (32) shiki -> . TYPE KAKKO shiki KOKKA
    (33) shiki -> . RESERV KAKKO shiki KOKKA
    (43) shiki -> . NUMBER
    (44) shiki -> . ID
    (45) shiki -> . TYPE
    (46) shiki -> . STR
    (50) shiki -> . OPMIN NUMBER
    (51) shiki -> . shiki OPTASU shiki
    (52) shiki -> . shiki OPKAKERU shiki
    (53) shiki -> . shiki OPMIN shiki
    (54) shiki -> . shiki OPWARU shiki
    (55) shiki -> . KAKKO shiki KOKKA
    (56) shiki -> . shiki CONMA ID
    (62) shiki -> . ID KAKKO shiki KOKKA
    (63) shiki -> . ID KAKKO KOKKA

    TYPEF           shift and go to state 18
    TYPE            shift and go to state 20
    RESERV          shift and go to state 21
    NUMBER          shift and go to state 22
    ID              shift and go to state 23
    STR             shift and go to state 24
    OPMIN           shift and go to state 25
    KAKKO           shift and go to state 19

    shiki                          shift and go to state 62

state 44

    (62) shiki -> ID KAKKO . shiki KOKKA
    (63) shiki -> ID KAKKO . KOKKA
    (31) shiki -> . TYPEF KAKKO shiki KOKKA
    (32) shiki -> . TYPE KAKKO shiki KOKKA
    (33) shiki -> . RESERV KAKKO shiki KOKKA
    (43) shiki -> . NUMBER
    (44) shiki -> . ID
    (45) shiki -> . TYPE
    (46) shiki -> . STR
    (50) shiki -> . OPMIN NUMBER
    (51) shiki -> . shiki OPTASU shiki
    (52) shiki -> . shiki OPKAKERU shiki
    (53) shiki -> . shiki OPMIN shiki
    (54) shiki -> . shiki OPWARU shiki
    (55) shiki -> . KAKKO shiki KOKKA
    (56) shiki -> . shiki CONMA ID
    (62) shiki -> . ID KAKKO shiki KOKKA
    (63) shiki -> . ID KAKKO KOKKA

    KOKKA           shift and go to state 64
    TYPEF           shift and go to state 18
    TYPE            shift and go to state 20
    RESERV          shift and go to state 21
    NUMBER          shift and go to state 22
    ID              shift and go to state 23
    STR             shift and go to state 24
    OPMIN           shift and go to state 25
    KAKKO           shift and go to state 19

    shiki                          shift and go to state 63

state 45

    (50) shiki -> OPMIN NUMBER .
